@@ -16,6 +16,7 @@ Features:
 - "set default_cmd" now allows to configure what happen on empty lines
 - "view switch" changes between readable/full view (by Andrew Fowlie)
 - customize prompt with "set prompt_on" and "set prompt_off" (by Andrew Fowlie)
+- "help help" now sends an email to the offpunk-users mailing-list
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
